syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enums.proto";
//import "pb_chat.proto";
import "pb_views.proto";

/////////////////////////// Messages Offline //////////////////////////////////
message PB_Offline_NewDirectMessage{
    string ChatKey =1;
    int64 FromMessageId =2;
    int64 AtTime =3;
}

message PB_Offline_MessagesReachedServer{
    repeated string MessageKeys =1;
    int64 AtTime =2;
}

message PB_Offline_MessagesDeliveredToUser{
    repeated string MessageKeys =1;
    string RoomKey =2;
    int64 AtTime =3;
}

message PB_Offline_MessagesSeenByPeer{
    repeated string MessageKeys =1;
    string RoomKey =2;
    int64 AtTime =3;
}

message PB_Offline_MessagesDeletedFromServer{
    repeated string MessageKeys =1;
    //string RoomKey =2;
    int64 AtTime =3;
}

message PB_Offline_ChangeMessageId{
    int64 MessageKey =1;
    int64 NewMessageId =2;
}

message PB_Offline_ChangeMessageFileId{
    int64 MessageFileKey =1;
    int64 NewMessageFileId =2;
}

message PB_Offline_MessageToEdit{
    int64 MessageKey =1;
    string NewText =2;
}

message PB_Offline_MessageToDelete{
    int64 MessageKey =1;
}

message PB_Online_RoomActionDoing{
    //    int64 ChatId = 1;
    string RoomKey = 2;
    RoomActionDoingEnum ActionType = 3;
}
//////////////////////////////////////////////////////////////

message PB_Offline_Messagings{
    //new mssages
    repeated PB_MessageView NewMessages = 1;
    repeated PB_MessageFileView ChatFiles = 2;
    repeated PB_ChatView Chats = 3;
    repeated PB_UserView Users = 6;

    repeated PB_Offline_ChangeMessageId ChangeMessageIds = 10;
    repeated PB_Offline_ChangeMessageFileId ChangeMessageFileIds = 15;

    repeated PB_Offline_MessageToEdit MessagesToEdit = 11;
    repeated PB_Offline_MessageToDelete MessagesToDelete = 12;

    //messages meta info
    repeated PB_Offline_MessagesReachedServer MessagesReachedServer = 20;
    repeated PB_Offline_MessagesDeliveredToUser MessagesDeliveredToUser = 21;
    repeated PB_Offline_MessagesSeenByPeer MessagesSeenByPeer = 22;
    repeated PB_Offline_MessagesDeletedFromServer MessagesDeletedFromServer = 23;

    //room updates
    repeated PB_Online_RoomActionDoing RoomActionDoing = 30;

    int64 LastId = 50;
}

